--- a/up.htm
+++ b/up.htm
@@ -10,7 +10,7 @@
 <tr>
 <td align="center" valign="middle">
 <a href="/karts/bbs/zboard.php?id=board110" target="main1">
-<img border="0" src="images/shop.jpg" width="175" height="38"></a></td>      
+<img border="0" src="shop.jpg" width="175" height="38"></a></td>      
 <td align="center" valign="middle" rowspan="2">
 <p align="center"><map name="FPMap1">
 <area href="/karts/bbs/zboard.php?id=board101" shape="rect" coords="98, 31, 180, 48" target="main1">
@@ -21,16 +21,16 @@
 <area href="/karts/bbs/zboard.php?id=board114" target="main1" shape="rect" coords="430, 2, 580, 50">
 
 </map>
-<img border="0" src="images/top.jpg" usemap="#FPMap1" width="587" height="53"></a>
+<img border="0" src="top.jpg" usemap="#FPMap1" width="587" height="53"></a>
 <center><font size="3" color="red">
 <b>&nbsp; &nbsp;<a href="/karts/bbs/login.php?id=board101&page=1&sn1=&divpage=1&sn=off&ss=on&sc=on&select_arrange=headnum&desc=asc&s_url=%2Fkarts%2Fbbs%2Fzboard.php%3Fid%3Dboard101
-" target="main1"><img border="0" src="images/login.gif" width="62" height="16"></a>&nbsp;&nbsp;&nbsp;<a href="/karts/bbs/member_join.php?group_no=1" target="main1"><img border="0" src="images/join.gif" width="90" height="16"></a></font></b>&nbsp;  &nbsp; &nbsp;<font size="3"> (관리자: 손 정호, 카톡: dancekorea, jst4567@gmail.com), 핸드폰: 010-8338-0380)
+" target="main1"><img border="0" src="login.gif" width="62" height="16"></a>&nbsp;&nbsp;&nbsp;<a href="/karts/bbs/member_join.php?group_no=1" target="main1"><img border="0" src="images/join.gif" width="90" height="16"></a></font></b>&nbsp;  &nbsp; &nbsp;<font size="3"> (관리자: 손 정호, 카톡: dancekorea, jst4567@gmail.com), 핸드폰: 010-8338-0380)
 </font></center>
 </td></tr>
 <tr>
 <td align="center" valign="middle">
 <a href="/karts/bbs/zboard.php?id=board105" target="main1">
-<img border="0" src="images/premieum.jpg" width="175" height="38"></a></td></tr>
+<img border="0" src="premieum.jpg" width="175" height="38"></a></td></tr>
 </table>
  </div>
  </div></body> 
